import type { oas31 } from "openapi3-ts";
import { expect, test } from "vitest";
import { processOpenApiDocument } from "../lib/process-document.ts";

const respOk = {
	"200": {
		description: "OK",
		content: { "application/json": { schema: { type: "string" } } },
	},
} as const;

test("main.ts emits file-level `import type` for type-only imports", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/one": {
				post: {
					operationId: "oneCommand",
					requestBody: {
						content: {
							"application/json": {
								schema: {
									type: "object",
									properties: { x: { type: "string" } },
								},
							},
						},
					},
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.mainFile.getText()).toMatchSnapshot("main.ts");
});

test("optional query params do not carry `| undefined` in their property type", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/files": {
				get: {
					operationId: "listFilesCommand",
					parameters: [
						{
							name: "purpose",
							in: "query",
							required: false,
							schema: { type: "string" },
						},
						{
							name: "limit",
							in: "query",
							required: false,
							schema: { type: "integer", minimum: 1, maximum: 100 },
						},
					],
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

test("AllInputs union carries every command that takes an input", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/with-body": {
				post: {
					operationId: "withBodyCommand",
					requestBody: {
						content: {
							"application/json": {
								schema: {
									type: "object",
									properties: { x: { type: "string" } },
								},
							},
						},
					},
					responses: respOk,
				},
			},
			"/empty-a": {
				get: { operationId: "alphaCommand", responses: respOk },
			},
			"/empty-b": {
				get: { operationId: "betaCommand", responses: respOk },
			},
			"/empty-c": {
				get: { operationId: "gammaCommand", responses: respOk },
			},
			"/with-query": {
				get: {
					operationId: "withQueryCommand",
					parameters: [
						{
							name: "q",
							in: "query",
							required: false,
							schema: { type: "string" },
						},
					],
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.mainFile.getText()).toMatchSnapshot("main.ts");
});

// An empty schema permits any value, so the keys outside `properties` are
// unconstrained and the object is loose
test.for([
	["empty schema", {}],
	["string schema", { type: "string" }],
	["false", false],
	["true", true],
] as const)(
	"additionalProperties chooses the object schema: %s",
	async ([, additionalProperties]) => {
		const result = await processOpenApiDocument(
			"/tmp/additional-properties",
			docWithSchema("Open", {
				type: "object",
				properties: { a: { type: "string" } },
				additionalProperties,
			}),
		);

		expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
	},
);

// A one-member `anyOf` or `oneOf` is that member. `v.union` of one option
// only wraps its issues, and the block65 valibot rules reject it
test.for<[string, oas31.SchemaObject]>([
	["anyOf", { anyOf: [{ type: "string" }] }],
	["oneOf", { oneOf: [{ type: "string" }] }],
	["two-member oneOf", { oneOf: [{ type: "string" }, { type: "number" }] }],
])(
	"a single-member combinator emits the member alone: %s",
	async ([, schema]) => {
		const result = await processOpenApiDocument(
			"/tmp/single-member-combinator",
			docWithSchema("Only", schema),
		);

		expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
	},
);

function docWithSchema(name: string, schema: oas31.SchemaObject) {
	return {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		components: { schemas: { [name]: schema } },
		paths: {
			"/thing": {
				get: {
					operationId: "getThingCommand",
					responses: {
						"200": {
							description: "OK",
							content: {
								"application/json": {
									schema: { $ref: `#/components/schemas/${name}` },
								},
							},
						},
					},
				},
			},
		},
	};
}

test("additionalProperties is a string-keyed record of the value type", async () => {
	const result = await processOpenApiDocument(
		"/tmp/whatever",
		docWithSchema("Labels", {
			type: "object",
			additionalProperties: { type: "string" },
		}),
	);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
	expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
});

test("additionalProperties alongside properties keeps the extra keys valid", async () => {
	const result = await processOpenApiDocument(
		"/tmp/whatever",
		docWithSchema("Config", {
			type: "object",
			properties: { name: { type: "string" } },
			additionalProperties: { type: "number" },
		}),
	);

	expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
});

test("additionalProperties true accepts any key", async () => {
	const result = await processOpenApiDocument(
		"/tmp/whatever",
		docWithSchema("Open", {
			type: "object",
			properties: { name: { type: "string" } },
			additionalProperties: true,
		}),
	);

	expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
});

test("an empty properties bag is a record, not an empty object type", async () => {
	const result = await processOpenApiDocument(
		"/tmp/whatever",
		docWithSchema("Empty", { type: "object", properties: {} }),
	);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

test("the generated JSON body type is PascalCase", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/batches": {
				post: {
					operationId: "createBatch",
					requestBody: {
						content: {
							"application/json": {
								schema: {
									type: "object",
									properties: { input_file_id: { type: "string" } },
								},
							},
						},
					},
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

test("an operation with both a 200 and a 204 emits one output type argument", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/auth": {
				post: {
					operationId: "systemAuthCommand",
					responses: {
						"200": {
							description: "OK",
							content: {
								"application/json": {
									schema: {
										type: "object",
										properties: { t: { type: "string" } },
									},
								},
							},
						},
						"204": { description: "No content" },
					},
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.commandsFile.getText()).toMatchSnapshot("commands.ts");
});

test("an array request body with parameters stays readable as both", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/plugins/pull": {
				post: {
					operationId: "pluginPullCommand",
					parameters: [
						{
							name: "remote",
							in: "query",
							required: true,
							schema: { type: "string" },
						},
					],
					requestBody: {
						content: {
							"application/json": {
								schema: { type: "array", items: { type: "string" } },
							},
						},
					},
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
	expect(result.commandsFile.getText()).toMatchSnapshot("commands.ts");
});

test("nested query param members get the same stringish treatment as top-level ones", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/search": {
				get: {
					operationId: "searchCommand",
					parameters: [
						{
							name: "limit",
							in: "query",
							required: false,
							schema: { type: "integer" },
						},
						{
							name: "filter",
							in: "query",
							required: false,
							schema: {
								type: "object",
								properties: {
									age: { type: "integer" },
									big: { type: "integer", format: "int64" },
									active: { type: "boolean" },
									label: { type: "string" },
								},
							},
						},
						{
							name: "ids",
							in: "query",
							required: false,
							schema: { type: "array", items: { type: "integer" } },
						},
					],
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

test("json request body members keep their real JSON types, nested included", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/containers": {
				post: {
					operationId: "createContainerCommand",
					requestBody: {
						content: {
							"application/json": {
								schema: {
									type: "object",
									properties: {
										tty: { type: "boolean" },
										retries: { type: "integer" },
										health: {
											type: "object",
											properties: {
												interval: { type: "integer", format: "int64" },
												enabled: { type: "boolean" },
											},
										},
										sizes: { type: "array", items: { type: "integer" } },
									},
								},
							},
						},
					},
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

// Composition has to forward the codegen options the same way the array and
// object branches do, or a oneOf collapses back to the JSON types
test("a oneOf query param keeps the stringish wire types in every branch", async () => {
	const schema: oas31.OpenAPIObject = {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/things": {
				get: {
					operationId: "listThingsCommand",
					parameters: [
						{
							name: "size",
							in: "query",
							required: false,
							schema: {
								oneOf: [{ type: "integer" }, { type: "string" }],
							},
						},
						{
							name: "flag",
							in: "query",
							required: false,
							schema: {
								anyOf: [{ type: "boolean" }, { type: "string" }],
							},
						},
						{
							name: "nested",
							in: "query",
							required: false,
							schema: {
								type: "object",
								properties: {
									count: {
										oneOf: [{ type: "integer" }, { type: "string" }],
									},
								},
							},
						},
					],
					responses: respOk,
				},
			},
		},
	};

	const result = await processOpenApiDocument("/tmp/whatever", schema);

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

test("an object schema that omits `type` still honours `required`", async () => {
	const result = await processOpenApiDocument("/tmp/whatever", {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {},
		components: {
			schemas: {
				Untyped: {
					required: ["id"],
					properties: { id: { type: "string" }, note: { type: "string" } },
				},
			},
		},
	});

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
});

test("a $ref nested past the top level registers after its target", async () => {
	const result = await processOpenApiDocument("/tmp/whatever", {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {},
		components: {
			schemas: {
				// each refers to Leaf before it is declared
				InArrayItem: {
					type: "array",
					items: {
						type: "object",
						properties: { leaf: { $ref: "#/components/schemas/Leaf" } },
					},
				},
				InRecord: {
					type: "object",
					additionalProperties: { $ref: "#/components/schemas/Leaf" },
				},
				InUnionBesideProperties: {
					type: "object",
					properties: { id: { type: "string" } },
					allOf: [{ $ref: "#/components/schemas/Leaf" }],
				},
				Leaf: {
					type: "object",
					properties: { name: { type: "string" } },
					additionalProperties: false,
				},
			},
		},
	});

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
	expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
});

test("a value the schema leaves open is a JsonValue on both sides", async () => {
	const result = await processOpenApiDocument("/tmp/whatever", {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {},
		components: {
			schemas: {
				Open: {
					type: "object",
					required: ["anything", "record", "list"],
					properties: {
						anything: {},
						record: { type: "object", additionalProperties: true },
						list: { type: "array" },
					},
					additionalProperties: false,
				},
			},
		},
	});

	expect(result.typesFile.getText()).toMatchSnapshot("types.ts");
	expect(result.valibotFile.getText()).toMatchSnapshot("valibot.ts");
});

test("a bodiless success is undefined, and no documented success is never", async () => {
	const result = await processOpenApiDocument("/tmp/whatever", {
		openapi: "3.1.0",
		info: { title: "Test", version: "1.0.0" },
		paths: {
			"/no-content": {
				delete: {
					operationId: "noContentCommand",
					responses: { "204": { description: "No Content" } },
				},
			},
			"/ok-without-body": {
				post: {
					operationId: "okWithoutBodyCommand",
					responses: { "200": { description: "OK" } },
				},
			},
			"/failures-only": {
				post: {
					operationId: "failuresOnlyCommand",
					responses: { "400": { description: "Bad Request" } },
				},
			},
			"/nothing-documented": {
				post: { operationId: "nothingDocumentedCommand", responses: {} },
			},
			"/bytes": {
				get: {
					operationId: "bytesCommand",
					responses: {
						"200": {
							description: "OK",
							content: { "application/octet-stream": {} },
						},
					},
				},
			},
		},
	});

	expect(result.commandsFile.getText()).toMatchSnapshot("commands.ts");
	expect(result.mainFile.getText()).toMatchSnapshot("main.ts");
});
